# CODEGUARDIAN-AI

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml
codeguardian-ai/: .dockerignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  requirements.txt
codeguardian-ai/agents/: __init__.py  architecture_agent.py  base.py  bug_agent.py  consensus_agent.py  performance_agent.py  quality_agent.py  report_agent.py  risk_agent.py  security_agent.py
codeguardian-ai/api/: __init__.py  routes.py
codeguardian-ai/database/: __init__.py  crud.py  database.py  models.py
codeguardian-ai/evaluation/: __init__.py  datasets.py  evaluator.py  metrics.py
codeguardian-ai/github_tools/: __init__.py  checks.py  comments.py  diff.py  github_api.py  webhook.py
codeguardian-ai/graph/: __init__.py  nodes.py  router.py  state.py  workflow.py
codeguardian-ai/llm/: __init__.py  gemini_client.py  groq_client.py  router.py
codeguardian-ai/observability/: __init__.py  langsmith.py
codeguardian-ai/prompts/: __init__.py  architecture.txt  bug.txt  consensus.txt  performance.txt  quality.txt  report.txt  risk.txt  security.txt
codeguardian-ai/scanners/: __init__.py  bandit_runner.py  parser.py  pipeline.py  ruff_runner.py  semgrep_runner.py
codeguardian-ai/tests/: __init__.py  test_agents.py  test_api.py  test_database.py  test_evaluation.py  test_graph.py  test_llm_router.py  test_scanners.py  test_webhook.py
